hphp/test/zend/good/Zend/tests/bug47572.php
<?php

class Foo {
  public static $bar = array(
    FOO => "bar"
    );

}

$foo = new Foo();

?>